# cookiecutter-hmpy

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .flake8  README.md  noxfile.py  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: release.yml  tests.yml
