[tool.poetry]
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
classifiers = [
  "{{cookiecutter.development_status}}",
]
description = "{{cookiecutter.friendly_name}}"
documentation = "https://{{cookiecutter.project_name}}.readthedocs.io"
homepage = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}"
license = "{{cookiecutter.license}}"
name = "{{cookiecutter.project_name}}"
packages = [
  {include = "{{cookiecutter.package_name}}"},
]
readme = "README.md"
repository = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}"
version = "0.0.0"

[tool.poetry.urls]
Changelog = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}/releases"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = ">=6.2"}
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
myst-parser = {version = ">=0.16.1"}
nox = "*"
nox-poetry = "*"
pep8-naming = ">=0.12.1"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}

[tool.poetry.scripts]
{{cookiecutter.project_name}} = "{{cookiecutter.package_name}}.__main__:main"

[tool.coverage.paths]
source = ["{{cookiecutter.package_name}}"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["{{cookiecutter.package_name}}", "tests"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.isort]
force_single_line = true
lines_after_imports = 2
profile = "black"

[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true
warn_unreachable = true

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry_core>=1.0", "poetry-dynamic-versioning"]
